--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html lang="en" ng-app="dynamicApp" ng-cloak>
+<html lang="en" data-ng-app="dynamicApp" data-ng-cloak>
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,7 +21,7 @@
         }
     </style>
 </head>
-<body ng-controller="itemCtrl">
+<body data-ng-controller="itemCtrl">
 
 <div id="layout">
   <!-- Menu toggle -->
@@ -33,37 +33,37 @@
       <div class="pure-menu">
           <ul class="pure-menu-list">
             <li class="pure-menu-item caption"><a href="#" class="pure-menu-link" onclick="window.location.reload();">Main</a></li>
-            <li class="pure-menu-item"><a href="" class="pure-menu-link" ng-click="visibleItems=!visibleItems">Overview</a></li>
+            <li class="pure-menu-item"><a href="" class="pure-menu-link" data-ng-click="visibleItems=!visibleItems">Overview</a></li>
           </ul>
       </div>
   </div>
 
 
-  <div class="pure-g" ng-show="visibleItems">
+  <div class="pure-g" data-ng-show="visibleItems">
 
     <div class="content pure-u-1 pure-u-md-11-24">
       <span class="caption">Items</span>
       <form class="pure-form itemCont">
         <fieldset>
-          <input class="pure-input-2-3" type="text" ng-model="addName" placeholder="Type name here...">
-          <button type="submit" class="pure-button button-new" ng-click="addItem()">Add new</button>
+          <input class="pure-input-2-3" type="text" data-ng-model="addName" placeholder="Type name here...">
+          <button type="submit" class="pure-button button-new" data-ng-click="addItem()">Add new</button>
         </fieldset>
       </form>
-      <div class="pure-g itemCont" ng-repeat="item in $storage.items">
+      <div class="pure-g itemCont" data-ng-repeat="item in $storage.items">
           <div class="pure-u-1 pure-u-md-2-3">
-              <a href="#" ng-click="viewComments($index)"><b>{{item.name}}</b>
+              <a href="#" data-ng-click="viewComments($index)"><b>{{item.name}}</b>
               <button class="pure-button button-counter">{{item.comments.length}}</button></a>
           </div>
           <div class="pure-u-1 pure-u-md-1-3">
-              <button class="pure-button button-delete" ng-click="deleteItem($index)">Delete</button>
+              <button class="pure-button button-delete" data-ng-click="deleteItem($index)">Delete</button>
           </div>
       </div>
       <br>
   </div>
 
-  <div class="content pure-u-1 pure-u-md-11-24" ng-show="visibleComs">
+  <div class="content pure-u-1 pure-u-md-11-24" data-ng-show="visibleComs">
     <span class="caption">Comments #{{$storage.items.indexOf(itemidx)+1}}</span>
-    <div class="pure-g itemCont" ng-repeat="comment in itemidx.comments track by $index">
+    <div class="pure-g itemCont" data-ng-repeat="comment in itemidx.comments track by $index">
       <div class="pure-u-1-5">
         <img class="pure-img-responsive" src="http://placehold.it/70x70" alt="">
       </div>
@@ -77,7 +77,7 @@
         </div>
         <div class="pure-u-4-5">
           <form class="pure-form">
-            <textarea rows="4" class="pure-input-1" ng-model="newComment" ng-keypress="addComment($event)" required></textarea>
+            <textarea rows="4" class="pure-input-1" data-ng-model="newComment" data-ng-keypress="addComment($event)" required></textarea>
           </form>
         </div>
     </div>
