--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <style>
         [ng\:cloak],
         [ng-cloak],
+        [data-ng-cloak],
         .ng-cloak {
             display: none;
         }
